test/modules/cassella/ambigmodmain.good
error: Ambiguous module specified as main, there are multiple definitions of 'M'
ambigmodmain.chpl:2: note: defined here
ambigmodmain.chpl:8: note: defined here
