test/modules/cassella/ambigmodmain.mainModule.future
feature request: ability to disambiguate nested module for --main-module flag

If there are multiple modules with the same name that define a main function,
we should allow the user to specify which module they meant to use.  Right now,
providing X.M to disambiguate from Y.M won't resolve to a symbol - likely
because we treat the period as part of the name instead of a CallExpr(".") like
we do with enum or type accesses.

When this future is resolved, it'd be nice to verify that specifying either
module works, so the .compopts should be expanded to:

--main-module X.M # ambigmodmain.X.good
--main-module Y.M # ambigmodmain.Y.good

and please update Jira issue 177
(https://chapel.atlassian.net/projects/CHAPEL/issues/CHAPEL-177)